# Car_jetson

./: .gitignore  README.md  camera_test.py  gps与地图坐标对应关系.txt  map1.csv  map_room.yaml  mapp.yaml  mapp2.yaml  mapp3.yaml  mapp4.yaml  mapp5.yaml  test.py
Groot/: Groot  package.xml
URDF_ws/src/livox_laser_simulation_RO2/: CMakeLists.txt
URDF_ws/src/livox_laser_simulation_RO2/src/: livox_points_plugin.cpp
URDF_ws/src/livox_laser_simulation_RO2/urdf/: mid360.xacro
URDF_ws/src/robot/: CMakeLists.txt  package.xml
URDF_ws/src/robot/launch/: gazebo_sim.launch.py  my_launch.py
URDF_ws/src/robot/rviz_config/: robot_model.rviz
URDF_ws/src/robot/urdf/: first_robot.urdf  first_robot.xacro
URDF_ws/src/robot/world/: custom_room.world  custom_world.world  custom_world2.world  large.world
control_ws/src/control/: CMakeLists.txt  package.xml
control_ws/src/control/include/control/: include.hpp
control_ws/src/control/include/control/DoNav_tree_node/: IsNavKeyPress.hpp  Nav.hpp
control_ws/src/control/include/control/DoSlam_tree_node/: IsLiosamKeyPress.hpp  LIOSAM.hpp
control_ws/src/control/include/control/main_tree_node/: Idle.hpp  IsNavMode.hpp  IsSlamMode.hpp
control_ws/src/control/include/control/utils/: utils.hpp
control_ws/src/control/my_tree/: main_tree.xml  test.xml
control_ws/src/control/src/: control.cpp
control_ws/src/control/src/DoNav_tree_node/: IsNavKeyPress.cpp  Nav.cpp
control_ws/src/control/src/DoSlam_tree_node/: IsLiosamKeyPress.cpp  LIOSAM.cpp
control_ws/src/control/src/main_tree_node/: Idle.cpp  IsNavMode.cpp  IsSlamMode.cpp
control_ws/src/control/src/utils/: utils.cpp
multi_map_navigation/: TEST_FIX_README.md  test_navigation_fix.py
multi_map_navigation/src/: CHANGELOG_API.md  PACKAGE_STRUCTURE.md  PROJECT_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  kill_all.sh  test_api_format.py  test_map_switch.sh  test_nav2_server.py
multi_map_navigation/src/map/map1/: map1.csv  map1_clean.yaml
multi_map_navigation/src/map/map2/: map2.csv  map2_clean.yaml
multi_map_navigation/src/multi_map_navigation/: package.xml  setup.cfg  setup.py  test.py
multi_map_navigation/src/multi_map_navigation/config/: mock_tf_publisher.py  mqtt_config.yaml  navigation_config.yaml  test_mock_publisher.py
multi_map_navigation/src/multi_map_navigation/launch/: multi_map_navigation.launch.py
multi_map_navigation/src/multi_map_navigation/multi_map_navigation/: map_switch_controller.py  mqtt_task_receiver.py  navigation_manager.py  process_manager.py  status_reporter.py
multi_map_navigation/src/multi_map_navigation_msgs/: CMakeLists.txt  README.md  package.xml
multi_map_navigation/src/multi_map_navigation_msgs/msg/: MapSwitchTrigger.msg  RobotStatus.msg  Waypoint.msg  WaypointList.msg
nav2/: fastdds.xml  frames_2026-01-26_15.11.05.gv  frames_2026-01-26_15.58.15.gv
nav2/src/nav2/: CMakeLists.txt  package.xml
nav2/src/nav2/config/: nav2_real_params.yaml  nav2_sim_params.yaml
nav2/src/nav2/launch/: run.real_launch.py  run.sim_launch.py
nav2/src/nav2_init_pose/: package.xml  record_gps_map2.csv  setup.cfg  setup.py
nav2/src/nav2_init_pose/launch/: run.real_launch.py  run.sim_launch.py
nav2/src/nav2_init_pose/nav2_init_pose/: nav2_init_pose.py  nav2_init_pose_room.py
nav2/src/navigation2/: .dockerignore  .gitignore  Dockerfile  Doxyfile  LICENSE  README.md  codecov.yml
nav2/src/navigation2/.circleci/: config.yml  defaults.yaml
nav2/src/navigation2/.devcontainer/: devcontainer.json  on-create-command.sh  post-create-command.sh  update-content-command.sh
nav2/src/navigation2/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  mergify.yml
nav2/src/navigation2/doc/: README.md
nav2/src/navigation2/nav2_amcl/: CMakeLists.txt  README.md  package.xml  plugins.xml
nav2/src/navigation2/nav2_behavior_tree/: CMakeLists.txt  README.md  groot_instructions.md  nav2_tree_nodes.xml  package.xml
nav2/src/navigation2/nav2_behaviors/: CMakeLists.txt  README.md  behavior_plugin.xml  package.xml
nav2/src/navigation2/nav2_bringup/: CMakeLists.txt  README.md  package.xml
nav2/src/navigation2/nav2_bt_navigator/: CMakeLists.txt  README.md  package.xml
nav2/src/navigation2/nav2_collision_monitor/: CMakeLists.txt  README.md  package.xml
nav2/src/navigation2/nav2_common/: CMakeLists.txt  nav2_common-extras.cmake  package.xml
nav2/src/navigation2/nav2_constrained_smoother/: CMakeLists.txt  README.md  nav2_constrained_smoother.xml  package.xml
nav2/src/navigation2/nav2_controller/: CMakeLists.txt  README.md  package.xml  plugins.xml
nav2/src/navigation2/nav2_core/: CMakeLists.txt  README.md  package.xml
nav2/src/navigation2/nav2_costmap_2d/: CHANGELOG.rst  CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
nav2/src/navigation2/nav2_dwb_controller/: README.md
nav2/src/navigation2/nav2_graceful_controller/: CMakeLists.txt  README.md  graceful_controller_plugin.xml  package.xml
nav2/src/navigation2/nav2_lifecycle_manager/: CMakeLists.txt  package.xml
real_ws/: README.md
real_ws/src/launch_real/: package.xml  setup.cfg  setup.py
simulation_ws/src/cmd_vel_smooth/: package.xml  setup.cfg  setup.py
simulation_ws/src/convert_time/: CMakeLists.txt  package.xml
simulation_ws/src/launch_sim/: CMakeLists.txt  package.xml
simulation_ws/src/sim_imu/: CMakeLists.txt  package.xml
slam/src/LIO-SAM/: CMakeLists.txt
utils/src/pcd2pgm/: frames_2026-01-24_14.13.17.gv
utils/src/pcd_filter/: package.xml  setup.cfg  setup.py
utils/src/re_localization/: CMakeLists.txt  package.xml
utils/src/re_localization/include/pcl_localization/: pcl_localization_component.hpp
utils/src/re_localization/launch/: run.real_launch.py  run.sim_launch.py
utils/src/re_localization/param/: localization_real.yaml  localization_sim.yaml
utils/src/re_localization/src/: pcl_localization_component.cpp
utils/src/re_localization/srv/: ReLocalization.srv
utils/src/record_gps_map/: package.xml  record_gps_map.csv  setup.cfg  setup.py
(+1369 files in other folders)
