cmake_minimum_required(VERSION 3.8)
project(control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

find_package(rclcpp REQUIRED)
find_package(behaviortree_cpp_v3 REQUIRED)
find_package(yaml-cpp REQUIRED)

add_executable(control src/control.cpp 
    src/utils/utils.cpp
    src/main_tree_node/IsNavMode.cpp 
    src/main_tree_node/IsSlamMode.cpp
    src/main_tree_node/Idle.cpp
    src/DoSlam_tree_node/LIOSAM.cpp
    src/DoSlam_tree_node/IsLiosamKeyPress.cpp
    src/DoNav_tree_node/Nav.cpp
    src/DoNav_tree_node/IsNavKeyPress.cpp)

ament_target_dependencies(control rclcpp behaviortree_cpp_v3)
target_link_libraries(control yaml-cpp)

# 把可执行文件添加到install/{pkg_name}/lib目录下
install(TARGETS control
  DESTINATION lib/${PROJECT_NAME}
)

# 搜索本地include目录
include_directories(
  include
)

# 把include目录加载到install/{pkg_name}/include路径下
install(DIRECTORY include/
  DESTINATION include/
)

# 把my_tree路径下的xml加载到install/{pkg_name}/share路径下
install(DIRECTORY my_tree/
  DESTINATION share/${PROJECT_NAME}/my_tree/
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

# 让其他包可以直接使用#include "control/***"
ament_export_include_directories(include)
ament_package()
